# sdset

./: .gitignore  Cargo.toml  README.md  bench_script.sh  gen_graphs.sh  graph.plt
gen-bench-data/: Cargo.toml
gen-bench-data/src/: main.rs
src/: algorithm.rs  collection.rs  lib.rs  set.rs  sort_dedup.rs  two_minimums.rs
src/clean/: difference.rs  intersection.rs  mod.rs  union.rs
src/dedup/: mod.rs
src/duo/: difference.rs  difference_by_key.rs  intersection.rs  intersection_by_key.rs  mod.rs  symmetric_difference.rs  union.rs
src/multi/: difference.rs  difference_by_key.rs  intersection.rs  mod.rs  symmetric_difference.rs  union.rs
src/polymorphic/: mod.rs
src/polymorphic/duo/: difference.rs  mod.rs
