[package]
name = "sdset"
description = """
Set operations for sorted and deduplicated slices.
Much performances! Such Wow!
"""
version = "0.2.0"
documentation = "https://docs.rs/sdset"
authors = ["Kerollmops <renault.cle@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["set", "operation", "slice", "sort", "dedup"]
categories = ["algorithms"]

[dev-dependencies]
quickcheck = "0.6"

[features]
unstable = []
